Artist name overflow fix!

--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -18,6 +18,9 @@
 
 .song-artist-name {
     color: grey;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .song-title {
